add_CMGcontroller_rtc

--- a/rtc/CMakeLists.txt
+++ b/rtc/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(AccelerationChecker)
+add_subdirectory(CMGcontroller)
 add_subdirectory(NullComponent)
 add_subdirectory(RobotHardware)
 add_subdirectory(StateHolder)
